<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/top_heading"
        android:layout_width="@dimen/lpg_bg_width"
        android:layout_height="@dimen/lpg_bg_height"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/heading_view_margin_top"
        android:src="@drawable/img_view_bg"
        android:scaleType="center"
        android:contentDescription="@string/headline"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/head_text_view_txt_size"
        android:text="@string/lp_1"
        android:layout_alignTop="@id/top_heading"
        android:layout_marginTop="@dimen/head_text_view_margin_top"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textColor="@color/login_page_txt_color"
        />
    <LinearLayout
        android:id="@+id/login_panel_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_heading"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/email_lnr_lyt_marginTop"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/email_icon_height"
            android:contentDescription="@string/email_icon"
            android:src="@drawable/email2"
            android:layout_gravity="center"
            />
        <EditText
            android:layout_width="@dimen/email_field_layout_width"
            android:layout_height="@dimen/email_field_layout_height"
            android:hint="@string/email_hint"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/login_panel_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_panel_1"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/password_lnr_lyt_marginTop"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/password_icon_height"
            android:contentDescription="@string/pwrd_icon"
            android:src="@drawable/lock"
            android:layout_gravity="center"
            />
        <EditText
            android:layout_width="@dimen/password_field_layout_width"
            android:layout_height="@dimen/password_field_layout_height"
            android:hint="@string/pwrd_hint"
            android:inputType="textPassword"
            android:focusedByDefault="false"
            tools:targetApi="o" />
    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/login_btn_margin_top"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_bg"
        android:text="@string/lp_2"
        android:textAllCaps="false"
        android:textSize="@dimen/btn_txt_size"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        />
    <Button
        android:id="@+id/login2_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimary"
        android:text="@string/lp_3"
        android:textAllCaps="false"
        android:textSize="@dimen/btn_txt_size"
        android:textAlignment="center"
        android:textColor="@color/login_page_txt_color"
        />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_below="@+id/login2_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/fp_margin_bottom"
        android:text="@string/lp_4"
        android:textAllCaps="false"
        android:textSize="@dimen/fp_text_size" />


</RelativeLayout>